admin page with dynamic images

--- a/static/public/admin_baits.html
+++ b/static/public/admin_baits.html
@@ -13,7 +13,7 @@
         </td>
         <td>
             <p>
-                <img src="{{resized_img_src(filename={{ bait.image_name }}, width=50, height=50, mode='crop', quality=55)}}" />
+                <img src="{{ bait.url }}" />
                 {{ bait.name }} = : <b>{{ bait.image_name }}</b>
             </p>
 
