--- a/static/public/admin_baits.html
+++ b/static/public/admin_baits.html
@@ -19,10 +19,9 @@
 
             <p>
 
-            <form action="{{ url_for('upload') }}" method="POST"
-                  enctype="multipart/form-data">
-                <input type="file" name="file"/>
-                <input type="hidden" name="data" value="{{ bait.id }}" />
+            <p>
+            <form action="{{ url_for('edit_bait') }}" method="GET">
+                <input type="hidden" name="id" value="{{ bait.id }}" />
                 <input type="submit"/>
             </form>
             </p>
