--- a/static/public/index.html
+++ b/static/public/index.html
@@ -1,8 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>React-Redux-Flask</title>
+    <title>Custom baits</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="/src/images/favicon.png"/>
@@ -10,12 +11,12 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 
-</head>
+  </head>
 
-<body>
-<div id="root"></div>
-</body>
+  <body>
+  <div id="root"></div>
+  </body>
 
-<script src="/dist/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 
 </html>
