--- a/application/public/ample-admin-lite/html/index.html
+++ b/application/public/ample-admin-lite/html/index.html
@@ -90,13 +90,13 @@
                 </div>
                 <ul class="nav" id="side-menu">
                     <li style="padding: 70px 0 0;">
-                        <a href="index.html" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>Dashboard</a>
+                        <a href="{{ url_for('admin') }}" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>Dashboard</a>
                     </li>
                     <li>
                         <a href="profile.html" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Profile</a>
                     </li>
                     <li>
-                        <a href="basic-table.html" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Basic Table</a>
+                        <a href="{{ url_for('admin_colors') }}" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Basic Table</a>
                     </li>
                     <li>
                         <a href="fontawesome.html" class="waves-effect"><i class="fa fa-font fa-fw" aria-hidden="true"></i>Icons</a>
@@ -180,34 +180,29 @@
                 <!--/.row -->
                 <!--row -->
                 <!-- /.row -->
-                <div class="row">
-                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                        <div class="white-box">
-                            <h3 class="box-title">Products Yearly Sales</h3>
-                            <ul class="list-inline text-right">
-                                <li>
-                                    <h5><i class="fa fa-circle m-r-5 text-info"></i>Mac</h5> </li>
-                                <li>
-                                    <h5><i class="fa fa-circle m-r-5 text-inverse"></i>Windows</h5> </li>
-                            </ul>
-                            <div id="ct-visits" style="height: 405px;"></div>
-                        </div>
-                    </div>
-                </div>
+                <!--<div class="row">-->
+                    <!--<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">-->
+                        <!--<div class="white-box">-->
+                            <!--<h3 class="box-title">Products Yearly Sales</h3>-->
+                            <!--<ul class="list-inline text-right">-->
+                                <!--<li>-->
+                                    <!--<h5><i class="fa fa-circle m-r-5 text-info"></i>Mac</h5> </li>-->
+                                <!--<li>-->
+                                    <!--<h5><i class="fa fa-circle m-r-5 text-inverse"></i>Windows</h5> </li>-->
+                            <!--</ul>-->
+                            <!--<div id="ct-visits" style="height: 405px;"></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <!-- ============================================================== -->
                 <!-- table -->
                 <!-- ============================================================== -->
                 <div class="row">
                     <div class="col-md-12 col-lg-12 col-sm-12">
                         <div class="white-box">
-                            <div class="col-md-3 col-sm-4 col-xs-6 pull-right">
-                                <select class="form-control pull-right row b-none">
-                                    <option>March 2017</option>
-                                    <option>April 2017</option>
-                                    <option>May 2017</option>
-                                    <option>June 2017</option>
-                                    <option>July 2017</option>
-                                </select>
+                            <div class="col-md-1 col-sm-4 col-xs-6 pull-right">
+                                <a href="{{ url_for('edit_bait') }}" class="btn btn btn-rounded btn-default btn-outline m-r-5">
+                                <i class="ti-check text-success m-r-5"></i>ADD NEW</a>
                             </div>
                             <h3 class="box-title">Recent sales</h3>
                             <div class="table-responsive">
@@ -217,60 +212,20 @@
                                             <th>#</th>
                                             <th>NAME</th>
                                             <th>STATUS</th>
-                                            <th>DATE</th>
+                                            <th>AVAILABILITY</th>
                                             <th>PRICE</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td class="txt-oflo">Elite admin</td>
-                                            <td>SALE</td>
-                                            <td class="txt-oflo">April 18, 2017</td>
-                                            <td><span class="text-success">$24</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td class="txt-oflo">Real Homes WP Theme</td>
-                                            <td>EXTENDED</td>
-                                            <td class="txt-oflo">April 19, 2017</td>
-                                            <td><span class="text-info">$1250</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td class="txt-oflo">Ample Admin</td>
-                                            <td>EXTENDED</td>
-                                            <td class="txt-oflo">April 19, 2017</td>
-                                            <td><span class="text-info">$1250</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td class="txt-oflo">Medical Pro WP Theme</td>
-                                            <td>TAX</td>
-                                            <td class="txt-oflo">April 20, 2017</td>
-                                            <td><span class="text-danger">-$24</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td class="txt-oflo">Hosting press html</td>
-                                            <td>SALE</td>
-                                            <td class="txt-oflo">April 21, 2017</td>
-                                            <td><span class="text-success">$24</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>6</td>
-                                            <td class="txt-oflo">Digital Agency PSD</td>
-                                            <td>SALE</td>
-                                            <td class="txt-oflo">April 23, 2017</td>
-                                            <td><span class="text-danger">-$14</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td>7</td>
-                                            <td class="txt-oflo">Helping Hands WP Theme</td>
-                                            <td>MEMBER</td>
-                                            <td class="txt-oflo">April 22, 2017</td>
-                                            <td><span class="text-success">$64</span></td>
-                                        </tr>
+                                        {% for bait in baits %}
+                                            <tr class='clickable-row' data-href='{{ bait.redirect_url }}'>
+                                                <td>1</td>
+                                                <td class="txt-oflo"> {{ bait.name }} </td>
+                                                <td>{{ bait.image_name }}</td>
+                                                <td class="txt-oflo">April 18, 2017</td>
+                                                <td><span class="text-success">{{ bait.price }}</span></td>
+                                            </tr>
+                                        {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
@@ -291,7 +246,11 @@
                                     </div>
                                     <div class="mail-contnet">
                                         <h5>Pavan kumar</h5><span class="time">10:20 AM   20  may 2016</span>
-                                        <br/><span class="mail-desc">Donec ac condimentum massa. Etiam pellentesque pretium lacus. Phasellus ultricies dictum suscipit. Aenean commodo dui pellentesque molestie feugiat. Aenean commodo dui pellentesque molestie feugiat</span> <a href="javacript:void(0)" class="btn btn btn-rounded btn-default btn-outline m-r-5"><i class="ti-check text-success m-r-5"></i>Approve</a><a href="javacript:void(0)" class="btn-rounded btn btn-default btn-outline"><i class="ti-close text-danger m-r-5"></i> Reject</a>
+                                        <br/><span class="mail-desc">Donec ac condimentum massa. Etiam pellentesque pretium lacus. Phasellus ultricies dictum suscipit. Aenean commodo dui pellentesque molestie feugiat. Aenean commodo dui pellentesque molestie feugiat</span>
+                                        <a href="javacript:void(0)" class="btn btn btn-rounded btn-default btn-outline m-r-5">
+                                            <i class="ti-check text-success m-r-5"></i>Approve</a>
+                                        <a href="javacript:void(0)" class="btn-rounded btn btn-default btn-outline">
+                                            <i class="ti-close text-danger m-r-5"></i> Reject</a>
                                     </div>
                                 </div>
                                 <div class="comment-body">
@@ -416,7 +375,7 @@
     <!-- Sparkline chart JavaScript -->
     <script src="static/plugins/bower_components/jquery-sparkline/jquery.sparkline.min.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="static/js/custom.min.js"></script>
+    <script src="static/js/custom.js"></script>
     <script src="static/js/dashboard1.js"></script>
     <script src="static/plugins/bower_components/toast-master/js/jquery.toast.js"></script>
 </body>
