--- a/application/public/edit_or_add_bait.html
+++ b/application/public/edit_or_add_bait.html
@@ -1,72 +1,27 @@
 {% extends "base.html" %}
 
 
-<h3>{{ title }}</h3>
-
 {% block content %}
-
-<form action="" method="post">
+<div>
+    <form action="" method="post">
     {{ form.hidden_tag() }}
-    <p>
-        {{ form.name.label }}<br>
-        {{ form.name(size=48) }}<br>
-        {% for error in form.name.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.weight.label }}<br>
-        {{ form.weight(size=12) }}<br>
-        {% for error in form.name.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
 
-    <p>
-        {{ form.price.label }}<br>
-        {{ form.price(size=12) }}<br>
-        {% for error in form.price.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
+    {% from "_formhelpers.html" import render_field %}
+    <form method=post>
+      <dl>
+          {{ render_field(form.name) }}
+          {{ render_field(form.weight) }}
+          {{ render_field(form.price) }}
+          {{ render_field(form.body) }}
+          {{ render_field(form.title) }}
+          {{ render_field(form.status) }}
+          {{ render_field(form.availability) }}
+          {{ render_field(form.file) }}
+          {{ render_field(form.submit) }}
+    </dl>
+    </form>
 
-
-    <p>
-        {{ form.body.label }}<br>
-        {% for error in form.body.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-
-    <p>
-        {{ form.title.label }}<br>
-        {{ form.price(size=80) }}<br>
-        {% for error in form.title.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-
-    <p>
-        {{ form.file.label }}<br>
-        {% for error in form.file.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-
-    <p>
-        {{ form.status.label }}<br>
-        {% for error in form.status.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-
-    <p>
-        {{ form.availability.label }}<br>
-        {% for error in form.availability.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-
-    <p>{{ form.submit() }}</p>
 </form>
+</div>
+
 {% endblock %}
