--- a/application/public/edit_or_add_bait.html
+++ b/application/public/edit_or_add_bait.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
 
     {% from "_formhelpers.html" import render_field %}
