Upgrade dom model structure.

--- a/application/public/base.html
+++ b/application/public/base.html
@@ -96,10 +96,10 @@
                     <a href="{{ url_for('admin') }}" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>Dashboard</a>
                 </li>
                 <li>
-                    <a href="profile.html" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Profile</a>
+                    <a href="{{ url_for('baits') }}" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Profile</a>
                 </li>
                 <li>
-                    <a href="{{ url_for('admin_colors') }}" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Basic Table</a>
+                    <a href="{{ url_for('colors') }}" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Basic Table</a>
                 </li>
                 <li>
                     <a href="fontawesome.html" class="waves-effect"><i class="fa fa-font fa-fw" aria-hidden="true"></i>Icons</a>
