--- a/application/public/baits.html
+++ b/application/public/baits.html
@@ -54,34 +54,16 @@
         </div>
     </div>
 </div>
-<!--/.row -->
-<!--row -->
-<!-- /.row -->
-<!--<div class="row">-->
-<!--<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">-->
-<!--<div class="white-box">-->
-<!--<h3 class="box-title">Products Yearly Sales</h3>-->
-<!--<ul class="list-inline text-right">-->
-<!--<li>-->
-<!--<h5><i class="fa fa-circle m-r-5 text-info"></i>Mac</h5> </li>-->
-<!--<li>-->
-<!--<h5><i class="fa fa-circle m-r-5 text-inverse"></i>Windows</h5> </li>-->
-<!--</ul>-->
-<!--<div id="ct-visits" style="height: 405px;"></div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
 <!-- ============================================================== -->
 <!-- table -->
 <!-- ============================================================== -->
 <div class="row">
     <div class="col-md-12 col-lg-12 col-sm-12">
         <div class="white-box">
-            <div class="col-md-1 col-sm-4 col-xs-6 pull-right">
-                <a href="{{ url_for('edit_bait') }}" class="btn btn btn-rounded btn-default btn-outline m-r-5">
-                    <i class="ti-check text-success m-r-5"></i>ADD NEW</a>
+            <div class="col-md-2 col-sm-4 col-xs-6 pull-right">
+                <a href="{{ url_for('edit_bait') }}" class="btn btn-danger btn-block waves-effect waves-light">ADD NEW</a>
             </div>
-            <h3 class="box-title">Recent sales</h3>
+            <h3 class="box-title">BAITS</h3>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
