--- a/application/react/public/index.html
+++ b/application/react/public/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Custom baits</title>
-    <meta name="description" content="">
+    <meta name="description" content="Блесна от лучших производителей в интернет-каталоге custombaits.com.ua. Лучшие цены на блесну, быстрая доставка, гарантия!">
+    <meta name="keywords" content="Блесны">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="/src/images/favicon.png"/>
     <!-- <link rel="stylesheet" type="text/css" href="/dist/bundle.css"/> -->
