Admin panel update

--- a/application/public/base.html
+++ b/application/public/base.html
@@ -101,6 +101,9 @@
                 <li>
                     <a href="{{ url_for('colors') }}" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Colors</a>
                 </li>
+                <li>
+                    <a href="{{ url_for('comments') }}" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Comments</a>
+                </li>
             </ul>
             <div class="center p-20">
                 <a href="https://wrappixel.com/templates/ampleadmin/" target="_blank" class="btn btn-danger btn-block waves-effect waves-light">Upgrade to Pro</a>
