--- a/application/react/public/index.html
+++ b/application/react/public/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta charset="utf-8">
-    <title>Custom baits</title>
-    <meta name="description" content="Блесна от лучших производителей в интернет-каталоге custombaits.com.ua. Лучшие цены на блесну, быстрая доставка, гарантия!">
-    <meta name="keywords" content="Блесны">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="/src/images/favicon.png"/>
-    <!-- <link rel="stylesheet" type="text/css" href="/dist/bundle.css"/> -->
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/images/favicon-16x16.png">
-    <link rel="manifest" href="/src/site.webmanifest">
-    <link rel="mask-icon" href="/src/images/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-  </head>
-
-  <body>
-  <div id="root"></div>
-  </body>
-
-  <!-- <script src="/dist/bundle.js"></script> -->
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Custom baits</title><meta name="description" content="Блесна от лучших производителей в интернет-каталоге custombaits.com.ua. Лучшие цены на блесну, быстрая доставка, гарантия!"><meta name="keywords" content="Блесны"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" type="image/png" href="/src/images/favicon.png"/><link rel="apple-touch-icon" sizes="180x180" href="/src/images/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/src/images/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/src/images/favicon-16x16.png"><link rel="manifest" href="/src/site.webmanifest"><link rel="mask-icon" href="/src/images/safari-pinned-tab.svg" color="#5bbad5"><meta name="msapplication-TileColor" content="#da532c"><meta name="theme-color" content="#ffffff"><link href="/static/css/main.e1fc4567.css" rel="stylesheet"><link href="/static/css/main.e1fc4567.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/static/js/main.11ff063a.js"></script><script type="text/javascript" src="/static/js/main.11ff063a.js"></script></body></html>
