--- a/application/public/base.html
+++ b/application/public/base.html
@@ -51,7 +51,7 @@
         </div>
         
         <!-- search + user -->
-        <ul class="nav navbar-top-links navbar-right pull-right">
+        <!-- <ul class="nav navbar-top-links navbar-right pull-right">
           <li>
             <form role="search" class="app-search hidden-sm hidden-xs m-r-10">
               <input type="text" placeholder="Search..." class="form-control"> 
@@ -66,7 +66,7 @@
               <b class="hidden-xs">Steave</b>
             </a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </nav>
 
