--- a/application/public/comments.html
+++ b/application/public/comments.html
@@ -2,47 +2,42 @@
 
 {% block content %}
 
-<h3>{{ title }}</h3>
+<!-- <h3>{{ title }}</h3> -->
 
-<!-- ============================================================== -->
-<!-- table -->
-<!-- ============================================================== -->
 <div class="row">
-    <div class="col-md-12 col-lg-12 col-sm-12">
-        <div class="white-box">
-            <div class="col-md-2 col-sm-4 col-xs-6 pull-right">
-                <a href="{{ url_for('edit_comment') }}" class="btn btn-danger btn-block waves-effect waves-light">ADD NEW</a>
-            </div>
-            <h3 class="box-title">BAITS</h3>
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>NAME</th>
-                        <th>STATUS</th>
-                        <th>AVAILABILITY</th>
-                        <th>PRICE</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for comment in comments %}
-                    <tr class='clickable-row' data-href='{{ comment.redirect_url }}'>
-                        <td>{{ comment.id }}</td>
-                        <td class="txt-oflo"> {{ comment.name }} </td>
-                        <td>{{ comment.title }}</td>
-                        <td class="txt-oflo">{{ comment.social_url }}</td>
-                        <td><span class="text-success">{{ comment.body }}</span></td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+  <div class="col-md-12 col-lg-12 col-sm-12">
+    <div class="white-box">
+      <div class="col-md-2 col-sm-4 col-xs-6 pull-right">
+        <a href="{{ url_for('edit_comment') }}" class="btn btn-danger btn-block waves-effect waves-light">ADD NEW</a>
+      </div>
+      <h3 class="box-title">BAITS</h3>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>NAME</th>
+              <th>TITLE</th>
+              <th>SOCIAL URL</th>
+              <th>TEXT</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for comment in comments %}
+              <tr class='clickable-row' data-href='{{ comment.redirect_url }}'>
+                <td>{{ comment.id }}</td>
+                <td class="txt-oflo"> {{ comment.name }} </td>
+                <td>{{ comment.title }}</td>
+                <!-- <td class="txt-oflo">{{ comment.social_url }}</td> -->
+                <td>{{ comment.social_url }}</td>
+                <td><span class="text-success">{{ comment.body }}</span></td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
 </div>
-<!-- ============================================================== -->
-<!-- chat-listing & recent comments -->
-<!-- ============================================================== -->
 
 {% endblock %}
