--- a/application/public/comments.html
+++ b/application/public/comments.html
@@ -30,7 +30,9 @@
                 <td>{{ comment.title }}</td>
                 <!-- <td class="txt-oflo">{{ comment.social_url }}</td> -->
                 <td>{{ comment.social_url }}</td>
-                <td><span class="text-success">{{ comment.body }}</span></td>
+                <td>
+                  {{ comment.body }}
+                </td>
               </tr>
             {% endfor %}
           </tbody>
