--- a/application/public/base.html
+++ b/application/public/base.html
@@ -39,14 +39,18 @@
 
           <!-- logo -->
           <a class="logo" href="index.html">
-            <b>
+            Custom
+            <span>
+              Baits
+            </span>
+            <!-- <b>
               <img src="static/plugins/images/admin-logo.png" alt="home" class="dark-logo" />
               <img src="static/plugins/images/admin-logo-dark.png" alt="home" class="light-logo" />
             </b>
             <span class="hidden-xs">
               <img src="static/plugins/images/admin-text.png" alt="home" class="dark-logo" />
               <img src="static/plugins/images/admin-text-dark.png" alt="home" class="light-logo" />
-            </span> 
+            </span>  -->
           </a>
         </div>
         
