admin baits table => add edit && delete buttons

--- a/application/public/baits.html
+++ b/application/public/baits.html
@@ -78,6 +78,7 @@
               <th>STATUS</th>
               <th>AVAILABILITY</th>
               <th>PRICE</th>
+              <th>&nbsp;</th>
             </tr>
           </thead>
           <tbody>
@@ -88,6 +89,11 @@
                 <td>{{ bait.status }}</td>
                 <td class="txt-oflo">{{ bait.availability }}</td>
                 <td><span class="text-success">{{ bait.price }}</span></td>
+                <td>
+                  <!-- @TODO: add posibility to edit && delete bait in table -->
+                  <a href="{{ url_for('edit_bait') }}" class="btn btn-success">edit</a>
+                  <a href="{{ url_for('edit_bait') }}" class="btn btn-default">delete</a>
+                </td>
               </tr>
             {% endfor %}
           </tbody>
