--- a/application/public/baits.html
+++ b/application/public/baits.html
@@ -89,7 +89,7 @@
                 <td>{{ bait.status }}</td>
                 <td class="txt-oflo">{{ bait.availability }}</td>
                 <td><span class="text-success">{{ bait.price }}</span></td>
-                <td>
+                <td class="text-right">
                   <!-- @TODO: add posibility to edit && delete bait in table -->
                   <a href="{{ url_for('edit_bait') }}" class="btn btn-success">edit</a>
                   <a href="{{ url_for('edit_bait') }}" class="btn btn-default">delete</a>
