--- a/application/public/login.html
+++ b/application/public/login.html
@@ -3,23 +3,26 @@
 {% block content %}
   <h1>Sign In</h1>
 
-  <form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p>
-      {{ form.email.label }}<br>
-      {{ form.email(class_="form-control") }}<br>
-      {% for error in form.email.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-      {% endfor %}
-    </p>
-    <p>
-      {{ form.password.label }}<br>
-      {{ form.password(size=32) }}<br>
-      {% for error in form.password.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-      {% endfor %}
-    </p>
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p>{{ form.submit() }}</p>
-  </form>
+  <div class="row">
+    <form action="" method="post" class="col-md-4 col-xs-12">
+      {{ form.hidden_tag() }}
+      <div class="form-group">
+        {{ form.email.label }}
+        {{ form.email(class_="form-control") }}
+        {% for error in form.email.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+      </div>
+      <div class="form-group">
+        {{ form.password.label }}
+        {{ form.password(class_="form-control") }}
+        {% for error in form.password.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+      </p>
+      <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+      <p>{{ form.submit(class_="btn btn-lg btn-info") }}</p>
+    </form>
+  </div>
+
 {% endblock %}
