--- a/application/public/comments.html
+++ b/application/public/comments.html
@@ -20,6 +20,7 @@
               <th>TITLE</th>
               <th>SOCIAL URL</th>
               <th>TEXT</th>
+              <th>&nbsp;</th>
             </tr>
           </thead>
           <tbody>
@@ -32,6 +33,13 @@
                 <td>{{ comment.social_url }}</td>
                 <td>
                   {{ comment.body }}
+                </td>
+              </tr>
+              <tr>
+                <td colspan="5">
+                  <!-- @TODO: add posibility to edit && delete color in table -->
+                  <a href="{{ url_for('edit_bait') }}" class="btn btn-success">edit</a>
+                  <a href="{{ url_for('edit_bait') }}" class="btn btn-default">delete</a>
                 </td>
               </tr>
             {% endfor %}
